# oo-bot

./: .gitignore  Cargo.toml  Justfile  README.md  clippy.toml  deny.toml  env.example  flake.nix  nextest.toml  semgrep.yml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
benches/: oo_count_bench.rs  runtime_protection_bench.rs
ci/hardened-x64/: rust-toolchain.toml
config/: oo-bot.yaml
config/i18n/: operator_tui.yaml
deploy/apparmor/: oo-bot.apparmor
deploy/selinux/: install_selinux_policy.sh  oo_bot.fc  oo_bot.te
deploy/systemd/: oo-bot.service
docs/: README.md  index.md  runtime_protection.md  security_review.md  spec_boundaries.md  test_strategy.md
docs/appendices/: assumptions-and-non-goals.md  compatibility-matrix.md  migration-notes.md
docs/architecture/: config-model.md  module-boundaries.md  replay-harness.md
docs/decisions/: adr-0001-docs-structure.md  adr-0002-kanjidic2-source-of-truth.md  adr-0003-runtime-protection-boundary.md  adr-0004-sandbox-choice.md
docs/development/: ci-cd.md  code-generation.md  contributing.md  fuzzing.md  local-setup.md  nix-dev-shell.md  test-strategy.md
docs/operations/: deployment.md  hardening-and-lsm.md  maintenance.md  observability.md  rotation-and-recovery.md  runtime-modes.md  service-control.md  troubleshooting.md
docs/overview/: architecture.md  data-flow.md  glossary.md
docs/overview/architecture/: control-plane.md  governor-and-guardrails.md  replay-harness.md  runtime-protection.md  (+1 more)
docs/product/: behavior-spec.md  kanji-database-spec.md  message-analysis-spec.md  unicode-normalization-spec.md
docs/reference/: cli-reference.md  config-reference.md  docs-conventions.md  env-reference.md  error-reference.md  metrics-reference.md  replay-fixture-format.md  tui-reference.md
docs/security/: abuse-resistance.md  incident-response.md  logging-and-redaction.md  residual-risks.md  secrets-handling.md  security-controls.md  threat-model.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: analyze_message.rs  replay_parser.rs  sandbox_abi.rs
scripts/: audit_advanced_analysis.py  bootstrap_security_tools.sh  build_hardened_x64.sh  verify_hardening.sh
src/: config.rs  control.rs  lib.rs  main.rs  operator_tui.rs
src/app/: analyze_message.rs  mod.rs  replay.rs
src/audit/: mod.rs
src/domain/: detector.rs  kanji_matcher.rs  mod.rs  oo_counter.rs  reading_normalizer.rs
src/infra/: discord_handler.rs  mod.rs
src/sandbox/: abi.rs  host.rs
src/security/: circuit_breaker.rs  core_governor.rs  diagnostics.rs  duplicate_guard.rs  hardening.rs  lsm.rs  mod.rs  mode.rs  rate_limiter.rs  response_compiler.rs  session_budget.rs  suspicious_input.rs
tests/: analyze_message_integration.rs  audit_security.rs  build_verification.rs  config_strict.rs  defaults_canonical.rs  detector_differential.rs  fault_injection.rs  generated_db.rs  property_oo.proptest-regressions  property_oo.rs  property_runtime.rs  replay_harness.rs  replay_suppress_reason_regression.rs  runtime_protection_integration.rs  yaml_target_readings.rs
tests/snapshots/: operator_dashboard_wide.txt  operator_setup_preview_narrow.txt
xtask/: Cargo.toml
xtask/src/: main.rs
(+27 files in other folders)
