[package]
name = "discord-ooh-bot-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
discord-ooh-bot = { path = ".." }
libfuzzer-sys = "0.4"
serde_json = "1.0"
serde_yaml = "0.9"

[[bin]]
name = "analyze_message"
path = "fuzz_targets/analyze_message.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sandbox_abi"
path = "fuzz_targets/sandbox_abi.rs"
test = false
doc = false
bench = false

[[bin]]
name = "replay_parser"
path = "fuzz_targets/replay_parser.rs"
test = false
doc = false
bench = false
